[metadata]
name = genvexnabto
version = attr: genvexnabto.__version__
author = Superrob
author_email = robin@robserob.dk
license = GPLv3
description = A library to interface with Genvex Connect enabled ventilation units.
keywords = Genvex, Genvex Connect, Nabto, Optima 270, Optima 260, Optima 251, Optima 250, library, Home Automation
url = https://github.com/superrob/genvexnabto
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
python_requires = >=3.9
packages = find:
package_dir =
    =src
zip_safe = False

[options.packages.find]
where=src